# apps/orchestrator/pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.1.0"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "travel-schemas",
  "travel-shared",
  "redis",
    # --- Add these new dependencies for LangGraph and LangSmith ---
    "langgraph",
    "langchain",
    "langsmith",
    "langchain-openai",
    "langchain-community",
    "tavily-python"

]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

